# ouvinte-curioso-api

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/auth/: routes.py  schemas.py  session.py  spotify_oauth.py
app/core/: config.py
app/spotify/: client.py  mapper.py  routes.py  schemas.py
app/tests/: test_auth_security.py  test_health.py  test_spotify_mapper.py
docs/auth/: auth-contract.md  spotify-auth-poc-audit.md
docs/decisions/: 001-backend-stack.md
docs/foundation/: Ouvinte_Curioso_Fundacao_v1.md
